# vcs-library

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LIBRARY_ONTOLOGY.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: output-validate.yml  pages.yml  validate.yml
docs/: slot_generation_plan.md
libtools/: __main__.py  bom.py  cli.py  code_validator.py  compile_entry.py  export_json.py  fab_drawing.py  geometry_checks.py  output_validator.py  registry.py  report.py  schema_check.py
site/: index.html
tests/: test_bom.py  test_cli.py  test_code_validator.py  test_export_json.py  test_fab_drawing.py  test_geometry_checks.py  test_interface.py  test_output_validator.py  test_registry.py  test_schema_check.py
upstream/catarina-2026-07-08/: SOURCES.md  Schema - cabin assembly - walls + floor + top plate.py  Schema - cabin assembly - walls + floor.py  VCS Schema - Assembly - Rake Wall 1.py  VCS Schema - Assembly - Rake Wall 2.py  VCS Schema - Module - Ceiling with Limited Attic Storage.py  VCS Schema - Module - ExtWall - Front Rake.py  VCS Schema - Module - ExtWall - Side Rake.py  VCS Schema - Module - ExtWall - Single Door.rtf  VCS Schema - Module - ExtWall - Single Door.txt  VCS Schema - Module - ExtWall - Window.rtf  VCS Schema - Module - ExtWall - Window.txt  VCS Schema - Module - ExtWall.rtf  VCS Schema - Module - ExtWall.txt  VCS Schema - Part - Sloped Rafter for Sloped Top Plate.py  WIP VCS Schema - Part - Sloped Rafter for Flat Top Plate.py
